# HTTP-Whisper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: architecture.md  certificate-security.md  investigation-workbench.md  rule-format.md
packaging/installer/: README.md
scripts/: build.ps1  package-linux.sh  package.ps1
src/: baseline.rs  capsule.rs  capture.rs  certificate.rs  config.rs  dossier.rs  experiment.rs  export.rs  filtering.rs  guard.rs  investigation.rs  lib.rs  main.rs  model.rs  platform.rs  protocol.rs  replay.rs  rule_debugger.rs  rules.rs  storage.rs  threat.rs  ui.rs  websocket_replay.rs  windows_proxy.rs
