[package]
name = "http-whisper"
version = "0.7.1"
edition = "2024"
description = "A native HTTP/HTTPS and WebSocket debugging proxy for Windows and Linux"
license = "MIT"

[dependencies]
anyhow = "1.0"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
eframe = { version = "0.35", default-features = false, features = ["accesskit", "glow", "wayland", "x11"] }
egui_extras = "0.35"
flate2 = "1.1"
hex = "0.4"
http-body-util = "0.1"
hudsucker = { version = "0.24.1", features = ["http2"] }
parking_lot = "0.12"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "json"] }
regex = "1.12"
rusqlite = { version = "=0.38.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
url = "2.5"
uuid = { version = "1.18", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinInet",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3.23"

[profile.release]
lto = "thin"
strip = "symbols"
